--- a/cms/Views/Home/GridViewPartialView.cshtml
+++ b/cms/Views/Home/GridViewPartialView.cshtml
@@ -82,23 +82,26 @@
         settings.Columns.Add(column => { column.FieldName = "DeedName"; column.Caption = "Deed Name"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "Address"; column.Caption = "Address"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "ReligionId"; column.Caption = "Religion"; column.Width = Unit.Pixel(100); });
-        settings.Columns.Add(column => { column.FieldName = "DateOfBirth"; column.Caption = "Date Of Birth"; column.PropertiesEdit.DisplayFormatString = "dd/MM/yyyy"; column.Width = Unit.Pixel(100); });
+        settings.Columns.Add(column => { column.FieldName = "DateOfBirth"; column.Caption = "Date Of Birth"; column.PropertiesEdit.DisplayFormatString = "dd/MM/yyyy"; column.PropertiesEdit.DisplayFormatString = "dd/MM/yyyy"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "PlaceOfIssue"; column.Caption = "Place Of Issue"; column.Width = Unit.Pixel(130); });
         settings.Columns.Add(column => { column.FieldName = "AgeGroup"; column.Caption = "Age Group"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "DeedGender"; column.Caption = "Deed Gender"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "DeathAge"; column.Caption = "Death Age"; column.Width = Unit.Pixel(100); });
-        settings.Columns.Add(column => { column.FieldName = "Mortuary"; column.Caption = "Mortuary"; column.Width = Unit.Pixel(100); });
+        settings.Columns.Add(column => { column.FieldName = "MortuaryName"; column.Caption = "Mortuary"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(columnCheck =>
         {
             columnCheck.FieldName = "Burial_Status";
-            columnCheck.Caption = "Buried?";
+            columnCheck.Caption = "Buried";
             columnCheck.ColumnType = MVCxGridViewColumnType.CheckBox;
             columnCheck.Width = Unit.Pixel(120);
         });
+
+
         settings.Columns.Add(column => { column.FieldName = "PlaceOfBurial"; column.Caption = "Place Of Burial"; column.Width = Unit.Pixel(130); });
+        settings.Columns.Add(column => { column.FieldName = "DateOfBurial"; column.Caption = "Date Of Burial"; column.PropertiesEdit.DisplayFormatString = "dd/MM/yyyy"; column.Width = Unit.Pixel(130); });
 
         settings.Columns.Add(column => { column.FieldName = "UsualResidence"; column.Caption = "Usual Residence"; column.Width = Unit.Pixel(100); });
-        settings.Columns.Add(column => { column.FieldName = "CapturedDate"; column.Caption = "Captured Date"; column.Width = Unit.Pixel(100); });
+        settings.Columns.Add(column => { column.FieldName = "CapturedDate"; column.Caption = "Captured Date"; column.PropertiesEdit.DisplayFormatString = "dd/MM/yyyy"; column.Width = Unit.Pixel(100); });
 
         settings.Columns.Add(column => { column.FieldName = "ReceiptNo"; column.Caption = "Receipt No"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "CareTaker"; column.Caption = "Capturer"; column.Width = Unit.Pixel(120); });
