Added Report Header Landing with CRUD methods

--- a/cms/Views/Home/GridViewPartialView.cshtml
+++ b/cms/Views/Home/GridViewPartialView.cshtml
@@ -87,7 +87,7 @@
         settings.Columns.Add(column => { column.FieldName = "AgeGroup"; column.Caption = "Age Group"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "DeedGender"; column.Caption = "Deed Gender"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(column => { column.FieldName = "DeathAge"; column.Caption = "Death Age"; column.Width = Unit.Pixel(100); });
-        settings.Columns.Add(column => { column.FieldName = "MortuaryName"; column.Caption = "Mortuary"; column.Width = Unit.Pixel(100); });
+      //  settings.Columns.Add(column => { column.FieldName = "MortuaryName"; column.Caption = "Mortuary"; column.Width = Unit.Pixel(100); });
         settings.Columns.Add(columnCheck =>
         {
             columnCheck.FieldName = "Burial_Status";
