Fixed report Header

--- a/cms/Views/Graves/GridViewPartialView.cshtml
+++ b/cms/Views/Graves/GridViewPartialView.cshtml
@@ -1,8 +1,5 @@
-@using DevExpress.Web;
-@using DevExpress.Web.Mvc;
-@using cms.Helpers;
-@Html.DevExpress().GridView(
-    settings =>
+@{
+    var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GravesGridViewPartial";
         settings.CallbackRouteValues = new { Controller = "Graves", Action = "GravesGridViewPartial" };
@@ -10,12 +7,15 @@
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Graves", Action = "GravesEdit" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Graves", Action = "GravesDelete" };
 
-        settings.SettingsEditing.Mode = GridViewEditingMode.PopupEditForm;
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsBehavior.ConfirmDelete = true;
+
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsBehavior.ConfirmDelete = true;
         settings.SettingsEditing.Mode = GridViewEditingMode.PopupEditForm; // POPUP EDIT FORM
         settings.SettingsPopup.EditForm.Modal = true;
         settings.SettingsBehavior.ConfirmDelete = true;
-        Html.PalBrokerHtml().GridView.GridDefaultBehavior(settings, "GravesGridViewPartial");
+
         settings.SettingsPopup.EditForm.VerticalAlign = PopupVerticalAlign.WindowCenter;
         settings.SettingsPopup.EditForm.HorizontalAlign = PopupHorizontalAlign.WindowCenter;
         settings.SettingsPopup.EditForm.ShowHeader = true;
@@ -25,12 +25,13 @@
         settings.CommandColumn.ShowDeleteButton = false;
         settings.CommandColumn.ShowEditButton = false;
 
-        settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
-
-        //  settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Visible;
-
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Auto;
-        settings.Settings.VerticalScrollableHeight = 500;
+        settings.SettingsBehavior.AllowFocusedRow = true;
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = true;
+        settings.Settings.ShowFilterRow = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsBehavior.AllowSelectSingleRowOnly = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
 
         settings.Width = Unit.Percentage(100);
 
@@ -64,17 +65,10 @@
         settings.Columns.Add(column => { column.FieldName = "Status"; column.Caption = "Status"; column.Width = Unit.Pixel(100); });
         settings.Styles.AlternatingRow.BackColor = System.Drawing.Color.Beige;
 
-        settings.SettingsBehavior.AllowFocusedRow = true;
-        settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = true;
-        settings.Settings.ShowFilterRow = true;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
-        settings.SettingsBehavior.AllowSelectSingleRowOnly = true;
-        settings.CommandColumn.ShowSelectCheckbox = true;
-        settings.Settings.ShowHeaderFilterButton = true;
-        settings.SettingsPopup.HeaderFilter.Height = 250;
-        var headerFilterMode = GridHeaderFilterMode.CheckedList;
-        foreach (GridViewDataColumn column in settings.Columns)
-            column.SettingsHeaderFilter.Mode = headerFilterMode;
-
-    }).SetEditErrorText(ViewData["EditError"] != null ? (string)ViewData["EditError"] : string.Empty).Bind(Model).GetHtml()
+    });
+    if (ViewData["EditError"] != null)
+    {
+        grid.SetEditErrorText((string)ViewData["EditError"]);
+    }
+}
+@grid.Bind(Model).GetHtml()
