Show records and filter by Mortuary

--- a/cms/Views/Home/Index.cshtml
+++ b/cms/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
         }
 
 
-        alert(passed_params);
+     //   alert(passed_params);
 
         var link = '@Url.Action("ReportViewPartial", "Home", new { reportParams = "_reportParams_" })';
 
