Modified Edit on Application

--- a/cms/Views/Home/GridViewPartialView.cshtml
+++ b/cms/Views/Home/GridViewPartialView.cshtml
@@ -96,7 +96,7 @@
 			columnCheck.Width = Unit.Pixel(120);
 		});
 
-		//settings.Columns.Add(column => { column.FieldName = "MortuaryName"; column.Caption = "Mortuary Name"; column.Width = Unit.Pixel(130); });
+		settings.Columns.Add(column => { column.FieldName = "Mortuary"; column.Caption = "Mortuary Name"; column.Width = Unit.Pixel(130); });
 		settings.Columns.Add(column => { column.FieldName = "PlaceOfBurial"; column.Caption = "Place Of Burial"; column.Width = Unit.Pixel(130); });
 		settings.Columns.Add(column => { column.FieldName = "DateOfBurial"; column.Caption = "Date Of Burial"; column.PropertiesEdit.DisplayFormatString = "dd/MM/yyyy"; column.Width = Unit.Pixel(130); });
 
